@@ -10,6 +10,7 @@ Version 1.3.dev1
   * display white chars switch
   * highlighting current line switch
   * printing document output
+  * shortcuts dialog
 
 Version 1.2.0 - 26.10.2017 19:40
 
